--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
         <div>Contact</div>
         
         <h2>About Me</h2>
-        <p>My name is Cody Brock and I'm very pleased to meet you.  I originally graduated from UC Berkeley with Honors in History, and I'm excited to now turn my attention to becoming a full-stack developer. </p>  
+        <p>My name is Cody Brock and I'm very pleased to meet you.  I originally graduated from UC Berkeley with Honors in History, and I'm excited to now turn my attention to becoming a full-stack developer.  Currently, I work in the Adventure Travel industry where I organize group hiking experiences around the world. </p>  
         <br>
-        <p>In addition to my studies, I'm an avid musician, trathlete, and traveler.  I lived in Spain for 2 years to learn the langauge and broaden my horizons.  I'm always searching for directions to broaden my horizons and continue my learning. </p>
+        <p>In addition to my studies and career, I'm an avid musician, trathlete, and traveler.  I lived in Spain for 2 years to learn the langauge and broaden my horizons.  I'm always searching for new directions to broaden my horizons and continue my learning. </p>
         <br>
-        <p>If you have any questions at all, please do get in touch - I'd be happy to meet you.</p>
+        <p>If you have any questions at all, please do get in touch - I'd be happy to meet you!</p>
 
 
         <script src="" async defer></script>
