adding to the CSS document, also reformatted some of the index.html file to get them to lign up

--- a/index.html
+++ b/index.html
@@ -9,18 +9,23 @@
         <title>Cody Brock</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="assets/css/style.css">
     </head>
     <body>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        
-        <h1>Cody Brock</h1>
+        <div class="header">
+            <!-- <nav> -->
+                <ul>
+                    <li><a href="">Cody Brock</a></li>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Portfolio</a></li>
+                    <li><a href="">Contact</a></li>
+                </ul>
+            <!-- </nav> -->
+        </div>
 
-        <div>About</div>
-        <div>Portfolio</div>
-        <div>Contact</div>
         
         <h2>About Me</h2>
         <p>My name is Cody Brock and I'm very pleased to meet you.  I originally graduated from UC Berkeley with Honors in History, and I'm excited to now turn my attention to becoming a full-stack developer.  Currently, I work in the Adventure Travel industry where I organize group hiking experiences around the world. </p>  
