have made some updates to styles.css but am having troubles nesting the css classes

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <div class="header">
             <!-- <nav> -->
                 <ul>
-                    <li><a href="">Cody Brock</a></li>
-                    <li><a href="">About</a></li>
+                    <li><div class="name-menu"><a href="">Cody Brock</a></div></li>
+                    <li><div class="rest-of-menu"><a href="">About</a></div></li>
                     <li><a href="">Portfolio</a></li>
                     <li><a href="">Contact</a></li>
                 </ul>
@@ -30,7 +30,7 @@
         <h2>About Me</h2>
         <p>My name is Cody Brock and I'm very pleased to meet you.  I originally graduated from UC Berkeley with Honors in History, and I'm excited to now turn my attention to becoming a full-stack developer.  Currently, I work in the Adventure Travel industry where I organize group hiking experiences around the world. </p>  
         <br>
-        <p>In addition to my studies and career, I'm an avid musician, trathlete, and traveler.  I lived in Spain for 2 years to learn the langauge and broaden my horizons.  I'm always searching for new directions to broaden my horizons and continue my learning. </p>
+        <p>In addition to my studies and career, I'm an avid musician, trathlete, and traveler.  I lived in Spain for 2 years to learn the langauge and broaden my horizons.  I'm always searching for new directions to expand my knowledge and continue my learning. </p>
         <br>
         <p>If you have any questions at all, please do get in touch - I'd be happy to meet you!</p>
 
