mostly finishes work on the Contact page.  begins styling on Portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -9,25 +9,46 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="assets/css/style.css">
     </head>
+
+    <header>
+
+            <div class="container">
+                <nav>
+                    <ul class="name-header">
+                        <li><a href="">Cody Brock</a></li>
+                    </ul>
+                    
+                    <ul class="links">
+                        <li><a href="">About</a></li>
+                        <li><a href="portfolio.html">Portfolio</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                    </ul>
+                </nav>
+            </div>
+    </header>
+
     <body>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        
+        <div class="main-content-wrapper">
 
-        <h2>Portfolio</h2>
+            <h2>Portfolio</h2>
+            <img src="https://www.istockphoto.com/gb/photo/technology-network-gm1037573870-277745844" alt="">
 
-        <div>Hangman</div>
+            <div>Hangman</div>
 
-        <div>RPG Game</div>
+            <div>RPG Game</div>
 
-        <div>Trivia Game</div>
+            <div>Trivia Game</div>
 
-        <div>Rutgers Info Widget</div>
+            <div>Rutgers Info Widget</div>
 
-        <div>Rock Paper Scissors</div>
+            <div>Rock Paper Scissors</div>
+
+        </div>
 
 
         <script src="" async defer></script>
