--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
         <div class="container">
             <nav>
                 <ul class="name-header">
-                    <li><a href="">Cody Brock</a></li>
+                    <li><a href="index.html">Cody Brock</a></li>
                 </ul>
                 
                 <ul class="links">
-                    <li><a href="">About</a></li>
+                    <li><a href="index.html">About</a></li>
                     <li><a href="portfolio.html">Portfolio</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
