--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <p>Please take a look around my page to learn more about me, see some of my work, and find my contact information.</p>
                     
                     <p>If you have any questions at all, please do get in touch - I'd be happy to meet you!</p>
-
+                        
                 </div>
 
             </div>
@@ -58,7 +58,7 @@
         <script src="" async defer></script>
     </body>
 
-    <footer id="footer">
+    <footer class="footer">
             <ul class="social">
                 <li>Copyright &copy;</li>
             </ul>
